fetch recent txs endpoint
